@@ -3,6 +3,9 @@
 o [Ncat] Fix hostname/certificate comparison and matching to handle ASN.1
   strings without null terminators, a similar bug to OpenSSL's CVE-2021-3712.
 
+o [Ncat][GH#2365] Added support for SOCKS5 proxies that return bind addresses
+  as hostnames, instead of IPv4/IPv6 addresses. [pomu0325]
+
 Nmap 7.92 [2021-08-07]
 
 o [Windows] Upgraded Npcap (our Windows raw packet capturing and
